test/parser.d/invalid/return.souc.disable
; return must not be followed by any other statements

f(x) = do
	y = x
	return y
	z = x
